fix: scrollbar auto-hides when there's no need to scroll

--- a/src/pages/templates/course.css
+++ b/src/pages/templates/course.css
@@ -8,7 +8,7 @@
   bottom: 0;
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 @media only screen and (max-width: 600px) {
